Fix css bugs, make all project tables wrap content

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -219,15 +219,22 @@ td{
   margin: 0 0 16px;
 }
 
-#project_table {
+.project_table {
   table-layout: fixed;
 }
 
-#project_table th {
+.project_table th {
   width : 20%;
 }
 
-#project_table td {
+.project_table td {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+}
+
+.project_table a {
+  display: block;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis; 
